fix: remove overflow hidden for testimonials

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -976,6 +976,12 @@
     }
 }
 
+@media screen and (max-width: 640px) {
+    .wraper-testimonials {
+        overflow: visible;
+    }
+}
+
 @media screen and (max-width: 639px) {
     main {
         margin-top: 34px;
